--- a/index.html
+++ b/index.html
@@ -331,6 +331,80 @@
           </figure>
         </div>
       </section>
+      <section class="section-pricing">
+        <div class="container">
+          <span class="subheading">Pricing</span>
+          <h2 class="heading-secondary">
+            Eating well without breaking the bank
+          </h2>
+        </div>
+        <div class="container grid grid--2-col">
+          <div
+            class="pricing-plan pricing-plan-complete best-plan pricing-plan-starter"
+          >
+            <div class="plan-header">
+              <p class="plan-name">Starter</p>
+              <p class="plan-price"><span>$</span>349</p>
+              <p class="plan-text">per month. That's just $13 per meal!</p>
+            </div>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+            </ul>
+            <div class="plan-signup">
+              <a href="#" class="btn btn--full">Start eating well</a>
+            </div>
+          </div>
+          <div class="pricing-plan pricing-plan-starter">
+            <div class="plan-header">
+              <p class="plan-name">Starter</p>
+              <p class="plan-price"><span>$</span>349</p>
+              <p class="plan-text">per month. That's just $13 per meal!</p>
+            </div>
+            <ul class="list">
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+              <li class="list-item">
+                <ion-icon class="diet-icon" name="checkmark-outline"></ion-icon
+                ><span>Vegetarian</span>
+              </li>
+            </ul>
+            <div class="plan-signup">
+              <a href="#" class="btn btn--full">Start eating well</a>
+            </div>
+          </div>
+        </div>
+        <div class="container grid grid--4-col">
+          <div class="feature">1</div>
+          <div class="feature">2</div>
+          <div class="feature">3</div>
+          <div class="feature">4</div>
+        </div>
+      </section>
     </main>
     <script
       type="module"
