--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Sample</title>
     <link rel="stylesheet" href="css/general.css" />
     <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/queries.css" />
   </head>
   <body>
     <header class="header">
@@ -27,7 +28,7 @@
     </header>
     <main>
       <section class="section-hero">
-        <div class="grid grid--2-col container">
+        <div class="grid grid--2-col container hero">
           <div class="hero-text-box">
             <h1 class="heading-primary">
               A healthy meal delivered to your door, every single day
