--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/queries.css" />
   </head>
   <body>
-    <header class="header">
+    <header class="header nav-open">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="" class="logo" />
       </a>
@@ -25,6 +25,10 @@
           </li>
         </ul>
       </nav>
+      <button class="btn-mobile-nav">
+        <ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon
+        ><ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon>
+      </button>
     </header>
     <main>
       <section class="section-hero">
@@ -490,7 +494,7 @@
       </section>
     </main>
     <footer class="footer">
-      <div class="container grid grid--5-col">
+      <div class="container grid grid--5-col footer-grid">
         <div class="logo-col">
           <a href="#" class="footer-logo">
             <img src="img/omnifood-logo.png" alt="" class="logo" />
