--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/queries.css" />
   </head>
   <body>
-    <header class="header nav-open">
+    <header class="header">
       <a href="#">
         <img src="img/omnifood-logo.png" alt="" class="logo" />
       </a>
@@ -26,8 +26,8 @@
         </ul>
       </nav>
       <button class="btn-mobile-nav">
-        <ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon
-        ><ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon>
+        <ion-icon name="menu-outline" class="icon-mobile-nav"></ion-icon>
+        <ion-icon name="close-outline" class="icon-mobile-nav"></ion-icon>
       </button>
     </header>
     <main>
