--- a/index.html
+++ b/index.html
@@ -566,5 +566,6 @@
       nomodule
       src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
     ></script>
+    <script></script>
   </body>
 </html>
